--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:unit": "vitest run --project unit"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -16,6 +19,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
+    "@vitejs/plugin-react": "^4.5.0",
     "formik": "^2.4.6",
     "next": "15.3.2",
     "react": "^19.0.0",
@@ -35,18 +39,23 @@
     "@storybook/react": "^8.6.14",
     "@storybook/test": "^8.6.14",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^20.17.57",
+    "@types/react": "^19.1.6",
     "@types/react-dom": "^19",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "@vitest/browser": "^3.1.4",
     "@vitest/coverage-v8": "^3.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "eslint-plugin-storybook": "^0.12.0",
+    "jsdom": "^26.1.0",
     "playwright": "^1.52.0",
     "storybook": "^8.6.14",
     "tailwindcss": "^4",
-    "typescript": "^5",
+    "typescript": "^5.8.3",
     "vitest": "^3.1.4"
   },
   "eslintConfig": {
