--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
+    "@mui/joy": "^5.0.0-beta.52",
     "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.1.0",
     "formik": "^2.4.6",
@@ -36,7 +37,7 @@
     "@storybook/test": "^8.6.14",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.1.6",
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.1.4",
     "@vitest/coverage-v8": "^3.1.4",
