--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.1.0",
+    "@fontsource/inter": "^5.2.5",
+    "@fontsource/roboto": "^5.2.5",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/joy": "^5.0.0-beta.52",
+    "@mui/material": "^7.1.1",
     "@mui/styled-engine-sc": "^7.1.0",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "next": "15.3.2",
     "react": "^19.0.0",
