--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.18",
+    "sweetalert2": "^11.22.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
