--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/styled-engine-sc": "^7.1.0",
     "@vitejs/plugin-react": "^4.5.0",
     "formik": "^2.4.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -44,6 +45,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.17.57",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19",
